[gd_scene load_steps=4 format=3 uid="uid://bgvurg4krr6wo"]

[ext_resource type="Texture2D" uid="uid://c2k3q4thg7tbi" path="res://assets/Spells/Items/Cobalt_bullet_item.png" id="1_28rny"]
[ext_resource type="Script" path="res://scripts/Levels/reward_item.gd" id="1_v72c7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2igl"]
size = Vector2(13, 17)

[node name="RewardItem" type="Node2D"]
script = ExtResource("1_v72c7")

[node name="RewardItem" type="Sprite2D" parent="."]
texture = ExtResource("1_28rny")

[node name="RewardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RewardArea"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_r2igl")

[connection signal="body_entered" from="RewardArea" to="." method="_on_reward_area_body_entered"]
[connection signal="body_exited" from="RewardArea" to="." method="_on_reward_area_body_exited"]
